[package]
name = "peony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 1

[dependencies]
cpal = "0.15.3"
rodio = "0.18.0"
rubato = "0.15.0"
symphonia = { version = "0.5.4", features = ["all"] }

